Update to Gradle 7.6 and JDK-19 (#4973)
* Update to Gradle 7.6 and JDK-19

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

* Address code review comments

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

* Address code review comments

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

* Update Gradle to 7.6-rc2

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

* Removed unnecessary override

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>