@@ -88,6 +88,10 @@ test {
   systemProperty 'tests.gradle_index_compat_versions', BuildParams.bwcVersions.indexCompatible.join(',')
   systemProperty 'tests.gradle_wire_compat_versions', BuildParams.bwcVersions.wireCompatible.join(',')
   systemProperty 'tests.gradle_unreleased_versions', BuildParams.bwcVersions.unreleased.join(',')
+  
+  if (BuildParams.runtimeJavaVersion >= JavaVersion.VERSION_18) {
+    jvmArgs += ["-Djava.security.manager=allow"]
+  }
 }
 
 tasks.register("integTest", Test) {
